--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,49 +1,59 @@
 {% extends "layout.html" %}
 {% block body %}
-
-<form class="form-horizontal" id="expense_input">
-<fieldset>
-
-<!-- Form Name -->
-<legend>Expense</legend>
-
-<!-- Appended Input-->
-<div class="control-group">
-  <label class="control-label" for="appendedtext">amount</label>
-  <div class="controls">
-    <div class="input-append">
-      <input data-bind="value: expenseAmount, valueUpdate: 'afterkeydown'" id="appendedtext" name="appendedtext" class="input-xlarge" placeholder="10" type="text">
-      <span class="add-on">cur</span>
+<form class="form-horizontal" id="expense_input"
+      data-bind="with: crete_transaction">
+  <fieldset>
+  <!-- Form Name -->
+    <legend>Expense</legend>
+    <!-- Appended Input-->
+    <div class="control-group">
+      <label class="control-label" for="appendedtext">amount</label>
+      <div class="controls">
+        <div class="input-append">
+          <input data-bind="value: expenseAmount, valueUpdate: 'afterkeydown'" id="appendedtext" name="appendedtext" class="input-xlarge" placeholder="10" type="text">
+          <span class="add-on">cur</span>
+        </div>
+        <p data-bind="if: expenseAmountError">
+           <span data-bind="text: expenseAmountError"></span>
+        </p>
+      </div>
     </div>
-    <p data-bind="foreach: expenseAmount.validationMessages">
-       <span data-bind="text: $data"></span>
-    </p>
-</div>
 
-<!-- Select Basic -->
-<div class="control-group">
-  <label class="control-label" for="curselect">currency</label>
-  <div class="controls">
-    <select id="curselect" name="curselect"
-            class="input-xlarge" data-bind="value: expenseCurrency">
-      <option>грн</option>
-      <option>$</option>
-    </select>
-  </div>
-</div>
+    <!-- Select Basic -->
+    <div class="control-group">
+      <label class="control-label" for="curselect">currency</label>
+      <div class="controls">
+        <select id="curselect" name="curselect"
+                class="input-xlarge" data-bind="value: expenseCurrency">
+          <option>грн</option>
+          <option>$</option>
+        </select>
+      </div>
+    </div>
 
-<!-- Button -->
-<div class="control-group">
-  <label class="control-label" for="addbtn"></label>
-  <div class="controls">
-    <button id="addbtn" name="addbtn"
-            class="btn btn-success" data-bind="click: save">
-        Add
-    </button>
-  </div>
-</div>
+    <div class="control-group">
+      <label class="control-label" for="addbtn"></label>
+      <div class="controls">
+        <button id="addbtn" name="addbtn"
+                class="btn btn-success" data-bind="click: save">
+            Add
+        </button>
+      </div>
+    </div>
+  </fieldset>
 </form>
 
+<table id="transactions_table" data-bind="with: list_transaction">
+  <thead>
+    <tr><th>id</th><th>ammount</th></tr>
+  </thead>
+  <tbody data-bind="foreach: transactions">
+    <tr>
+      <td data-bind="text: id"></td>
+      <td data-bind="text: amount"></td>
+    </tr>
+  </tbody>
+</table>
 {% endblock %}
 {% block script %}
 {% endblock %}
